# multi-seasonal-fourier-regression

./: .gitignore  MANIFEST.in  README.md  date_check.py  dependabot.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
benchmark/: make_plot_by_model.py  make_plot_by_msfr.py  readme.md
benchmark/Electricity Consumption Prediction Test/: train_msfr.py
benchmark/Electricity_Consumption_Prediction_Test/: diagnose.py  household_stats.csv  make_plot_by_prophet.py  test.ipynb  train_msfr.py  train_msfr_new.py
benchmark/Hourly_Energy_Consumption_Test/: diagnose.py  train_msfr.py  train_msfr_new.py
benchmark/Prophet Compare Test/: compare_prophet_and_msfr.py  make_plot_by_porphet.py  readme.md
benchmark/shape_test/: readme.md  shape_test.ipynb
benchmark/test/: diagnose.py  household_mean.py  test.ipynb  test.py  test_model.py  train_msfr.py
ckpts/: msfr_fixed.ckpt
model/: msfr_fixed.ckpt  msfr_fixed_huber.ckpt  msfr_new.ckpt
msfr/: __init__.py  core.py  imaginary.py
msfr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
