[project]
name = "MSFR"
version = "1.0.0"
description = "This is a python library for multi-seasonal time series regression with Fourier features and smoothing"
authors = [
  { name="rrayy", email="taejunham1@gmail.com" },
  { name="tatatommy6", email="tatatommy6@naver.com"}
]
license = {text = "Apache"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch==2.8.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
