[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msfr"   # 소문자로 바꾸는게 낮다고 생각 (다음 릴리스 때 같이 적용)
version = "1.1.0"
description = "Python library for multi-seasonal time series regression with Fourier features and smoothing"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"

authors = [
  { name = "rrayy", email = "taejunham1@gmail.com" },
  { name = "tatatommy6", email = "tatatommy6@naver.com" }
]

dependencies = [
  "torch>=2.8.0"
]

[tool.setuptools]
packages = ["msfr"]


[project.urls]
Homepage = "https://github.com/tatatommy6/multi-seasonal-fourier-regression"
Repository = "https://github.com/tatatommy6/multi-seasonal-fourier-regression"
Issues = "https://github.com/tatatommy6/multi-seasonal-fourier-regression/issues"
